--- a/templates/widget.html
+++ b/templates/widget.html
@@ -1,15 +1,15 @@
-<div class="widget-content-frame flex flex-row justify-start items-center gap-20">
+<div class="flex flex-row justify-start items-center gap-20" style="padding: 0; margin: 0;">
 
   {{ if .ImageURL }}
-    <div>
+    <div style="margin: 0;">
       <img src="{{ .ImageURL }}" alt="Album Cover"
            loading="lazy"
            class="card"
-           style="border-radius: 5px; min-width: 8rem; max-width: 8rem;">
+           style="border-radius: 5px; min-width: 8rem; max-width: 8rem; margin: 0;">
     </div>
   {{ end }}
 
-  <div class="flex grow flex-column justify-center" style="padding-right: 1rem">
+  <div class="flex grow flex-column justify-center" style="padding: 0; margin: 0;">
     {{ if .NowPlaying }}
       <div class="color-positive size-h4">🎵 {{ .Name }}</div>
       <div class="size-h4">{{ .Artist }}</div>
